Fix extra space on responsive sidebar

--- a/resources/sass/admin/admin.scss
+++ b/resources/sass/admin/admin.scss
@@ -50,12 +50,6 @@ body {
     }
 }
 
-@media (max-width: 767.98px) {
-    .sidebar {
-        top: 5rem;
-    }
-}
-
 .sidebar-sticky {
     position: relative;
     top: 0;
